# photos

./: .clang-format  .gitignore  CLAUDE.md  CMakeLists.txt  CMakePresets.json  README.md  a.out
assets/: PhotoLibrary.icns  make_icon.py  make_previews.py
cmake/: CompilerFlags.cmake  FindLibRaw.cmake
src/: main.mm
src/catalog/: BackupManager.cpp  BackupManager.h  Database.cpp  Database.h  EditSettings.h  PhotoRepository.cpp  PhotoRepository.h  Schema.cpp  Schema.h  ThumbnailCache.cpp  ThumbnailCache.h
src/command/: AppCommands.cpp  AppCommands.h  CommandRegistry.cpp  CommandRegistry.h  CommandResult.h  ICommandHandler.h
src/command/handlers/: CatalogOpenHandler.cpp  CatalogOpenHandler.h  CatalogPickHandler.cpp  CatalogPickHandler.h  ExportHandler.cpp  ExportHandler.h  ImageAdjustHandler.cpp  ImageAdjustHandler.h  ImageCropHandler.cpp  ImageCropHandler.h  ImageRevertHandler.cpp  ImageRevertHandler.h  ImageSaveHandler.cpp  ImageSaveHandler.h  MetaSyncHandler.cpp  MetaSyncHandler.h
src/export/: ExportPreset.h  ExportSession.cpp  ExportSession.h  Exporter.cpp  Exporter.h
src/import/: ExifParser.h  FileScanner.cpp  FileScanner.h  HashDedup.cpp  HashDedup.h  Importer.cpp  Importer.h  PreviewScanner.cpp  PreviewScanner.h  RawDecoder.cpp  RawDecoder.h  VolumeWatcher.h  VolumeWatcher.mm
src/ui/: EditView.h  EditView.mm  ExportDialog.cpp  ExportDialog.h  FilterBar.cpp  FilterBar.h  FolderTreePanel.cpp  FolderTreePanel.h  FullscreenView.cpp  FullscreenView.h  GridView.cpp  GridView.h  ImportDialog.cpp  ImportDialog.h  MetaSyncDialog.cpp  MetaSyncDialog.h  Renderer.h  Renderer.mm  SettingsPanel.cpp  SettingsPanel.h  TextureManager.h  TextureManager.mm  ThumbCropUV.cpp  ThumbCropUV.h  ThumbEditApplier.cpp  ThumbEditApplier.h
src/util/: PixelPipeline.cpp  PixelPipeline.h  Platform.h  Platform.mm  ThreadPool.cpp  ThreadPool.h
tests/: CMakeLists.txt  test_command_catalog.cpp  test_command_image.cpp  test_command_metasync.cpp  test_command_registry.cpp  test_database.cpp  test_hash_dedup.cpp  test_pixel_pipeline.cpp  test_placeholder.cpp  test_raw_decoder.cpp  test_thumb_crop.cpp
